[package]
name = "bmssp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "bmssp_core"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"

[dev-dependencies]
proptest = { version = "1.0", optional = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dijkstra_vs_bmssp"
harness = false

[features]
default = []
f64 = []
proptest = ["dep:proptest"]
[dev-dependencies.criterion]
