[package]
name = "bmssp-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "bmssp_core"
path = "src/lib.rs"

[dependencies]
num-traits = "0.2"
rayon = { version = "1.10", optional = true }
wide = { version = "0.7", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dijkstra_vs_bmssp"
harness = false

[[bench]]
name = "block_heap_bench"
harness = false

[features]
default = ["f32", "f64"]
# Enable f32 support (included by default)
f32 = []
# Enable f64 support (included by default)
f64 = []
# Note: f32-only and f64-only are placeholder flags.
# The codebase uses generic types, so these flags don't provide compile-time specialization.
# They are included for potential future use or API compatibility.
f32-only = []
f64-only = []
# Note: no-predecessors is a placeholder flag.
# Predecessor tracking is optional at the API level (bmssp_sssp vs bmssp_sssp_with_preds),
# but not conditionally compiled due to code complexity.
no-predecessors = []
# Note: fast-math would enable compiler fast-math optimizations.
# This would require build.rs or similar build configuration.
fast-math = []
parallel = ["dep:rayon"]
simd = ["dep:wide"]
